--- a/src/less/blocks/sprite.less
+++ b/src/less/blocks/sprite.less
@@ -20,8 +20,8 @@ At the bottom of this section, we provide information about the spritesheet itse
 @arrow-left-height: 37px;
 @arrow-left-total-width: 250px;
 @arrow-left-total-height: 185px;
-@arrow-left-image: '../../img/sprite.png';
-@arrow-left: 223px 80px -223px -80px 20px 37px 250px 185px '../../img/sprite.png' 'arrow-left';
+@arrow-left-image: '../../.././build/img/sprite.png';
+@arrow-left: 223px 80px -223px -80px 20px 37px 250px 185px '../../.././build/img/sprite.png' 'arrow-left';
 @arrow-right-name: 'arrow-right';
 @arrow-right-x: 223px;
 @arrow-right-y: 43px;
@@ -31,8 +31,8 @@ At the bottom of this section, we provide information about the spritesheet itse
 @arrow-right-height: 37px;
 @arrow-right-total-width: 250px;
 @arrow-right-total-height: 185px;
-@arrow-right-image: '../../img/sprite.png';
-@arrow-right: 223px 43px -223px -43px 20px 37px 250px 185px '../../img/sprite.png' 'arrow-right';
+@arrow-right-image: '../../.././build/img/sprite.png';
+@arrow-right: 223px 43px -223px -43px 20px 37px 250px 185px '../../.././build/img/sprite.png' 'arrow-right';
 @burger-name: 'burger';
 @burger-x: 155px;
 @burger-y: 113px;
@@ -42,8 +42,8 @@ At the bottom of this section, we provide information about the spritesheet itse
 @burger-height: 24px;
 @burger-total-width: 250px;
 @burger-total-height: 185px;
-@burger-image: '../../img/sprite.png';
-@burger: 155px 113px -155px -113px 29px 24px 250px 185px '../../img/sprite.png' 'burger';
+@burger-image: '../../.././build/img/sprite.png';
+@burger: 155px 113px -155px -113px 29px 24px 250px 185px '../../.././build/img/sprite.png' 'burger';
 @bus-icon-name: 'bus-icon';
 @bus-icon-x: 0px;
 @bus-icon-y: 158px;
@@ -53,8 +53,8 @@ At the bottom of this section, we provide information about the spritesheet itse
 @bus-icon-height: 27px;
 @bus-icon-total-width: 250px;
 @bus-icon-total-height: 185px;
-@bus-icon-image: '../../img/sprite.png';
-@bus-icon: 0px 158px 0px -158px 50px 27px 250px 185px '../../img/sprite.png' 'bus-icon';
+@bus-icon-image: '../../.././build/img/sprite.png';
+@bus-icon: 0px 158px 0px -158px 50px 27px 250px 185px '../../.././build/img/sprite.png' 'bus-icon';
 @calendar-icon-name: 'calendar-icon';
 @calendar-icon-x: 200px;
 @calendar-icon-y: 113px;
@@ -64,8 +64,8 @@ At the bottom of this section, we provide information about the spritesheet itse
 @calendar-icon-height: 16px;
 @calendar-icon-total-width: 250px;
 @calendar-icon-total-height: 185px;
-@calendar-icon-image: '../../img/sprite.png';
-@calendar-icon: 200px 113px -200px -113px 15px 16px 250px 185px '../../img/sprite.png' 'calendar-icon';
+@calendar-icon-image: '../../.././build/img/sprite.png';
+@calendar-icon: 200px 113px -200px -113px 15px 16px 250px 185px '../../.././build/img/sprite.png' 'calendar-icon';
 @error-notify-name: 'error-notify';
 @error-notify-x: 61px;
 @error-notify-y: 141px;
@@ -75,8 +75,8 @@ At the bottom of this section, we provide information about the spritesheet itse
 @error-notify-height: 12px;
 @error-notify-total-width: 250px;
 @error-notify-total-height: 185px;
-@error-notify-image: '../../img/sprite.png';
-@error-notify: 61px 141px -61px -141px 13px 12px 250px 185px '../../img/sprite.png' 'error-notify';
+@error-notify-image: '../../.././build/img/sprite.png';
+@error-notify: 61px 141px -61px -141px 13px 12px 250px 185px '../../.././build/img/sprite.png' 'error-notify';
 @ftr-icon-fb-name: 'ftr-icon-fb';
 @ftr-icon-fb-x: 223px;
 @ftr-icon-fb-y: 159px;
@@ -86,8 +86,8 @@ At the bottom of this section, we provide information about the spritesheet itse
 @ftr-icon-fb-height: 20px;
 @ftr-icon-fb-total-width: 250px;
 @ftr-icon-fb-total-height: 185px;
-@ftr-icon-fb-image: '../../img/sprite.png';
-@ftr-icon-fb: 223px 159px -223px -159px 20px 20px 250px 185px '../../img/sprite.png' 'ftr-icon-fb';
+@ftr-icon-fb-image: '../../.././build/img/sprite.png';
+@ftr-icon-fb: 223px 159px -223px -159px 20px 20px 250px 185px '../../.././build/img/sprite.png' 'ftr-icon-fb';
 @ftr-icon-inst-name: 'ftr-icon-inst';
 @ftr-icon-inst-x: 198px;
 @ftr-icon-inst-y: 62px;
@@ -97,8 +97,8 @@ At the bottom of this section, we provide information about the spritesheet itse
 @ftr-icon-inst-height: 20px;
 @ftr-icon-inst-total-width: 250px;
 @ftr-icon-inst-total-height: 185px;
-@ftr-icon-inst-image: '../../img/sprite.png';
-@ftr-icon-inst: 198px 62px -198px -62px 20px 20px 250px 185px '../../img/sprite.png' 'ftr-icon-inst';
+@ftr-icon-inst-image: '../../.././build/img/sprite.png';
+@ftr-icon-inst: 198px 62px -198px -62px 20px 20px 250px 185px '../../.././build/img/sprite.png' 'ftr-icon-inst';
 @ftr-icon-vk-name: 'ftr-icon-vk';
 @ftr-icon-vk-x: 223px;
 @ftr-icon-vk-y: 139px;
@@ -108,8 +108,8 @@ At the bottom of this section, we provide information about the spritesheet itse
 @ftr-icon-vk-height: 20px;
 @ftr-icon-vk-total-width: 250px;
 @ftr-icon-vk-total-height: 185px;
-@ftr-icon-vk-image: '../../img/sprite.png';
-@ftr-icon-vk: 223px 139px -223px -139px 20px 20px 250px 185px '../../img/sprite.png' 'ftr-icon-vk';
+@ftr-icon-vk-image: '../../.././build/img/sprite.png';
+@ftr-icon-vk: 223px 139px -223px -139px 20px 20px 250px 185px '../../.././build/img/sprite.png' 'ftr-icon-vk';
 @icon-area-name: 'icon-area';
 @icon-area-x: 0px;
 @icon-area-y: 113px;
@@ -119,8 +119,8 @@ At the bottom of this section, we provide information about the spritesheet itse
 @icon-area-height: 45px;
 @icon-area-total-width: 250px;
 @icon-area-total-height: 185px;
-@icon-area-image: '../../img/sprite.png';
-@icon-area: 0px 113px 0px -113px 45px 45px 250px 185px '../../img/sprite.png' 'icon-area';
+@icon-area-image: '../../.././build/img/sprite.png';
+@icon-area: 0px 113px 0px -113px 45px 45px 250px 185px '../../.././build/img/sprite.png' 'icon-area';
 @icon-bath-name: 'icon-bath';
 @icon-bath-x: 45px;
 @icon-bath-y: 113px;
@@ -130,8 +130,8 @@ At the bottom of this section, we provide information about the spritesheet itse
 @icon-bath-height: 28px;
 @icon-bath-total-width: 250px;
 @icon-bath-total-height: 185px;
-@icon-bath-image: '../../img/sprite.png';
-@icon-bath: 45px 113px -45px -113px 52px 28px 250px 185px '../../img/sprite.png' 'icon-bath';
+@icon-bath-image: '../../.././build/img/sprite.png';
+@icon-bath: 45px 113px -45px -113px 52px 28px 250px 185px '../../.././build/img/sprite.png' 'icon-bath';
 @icon-bed-name: 'icon-bed';
 @icon-bed-x: 143px;
 @icon-bed-y: 62px;
@@ -141,8 +141,8 @@ At the bottom of this section, we provide information about the spritesheet itse
 @icon-bed-height: 43px;
 @icon-bed-total-width: 250px;
 @icon-bed-total-height: 185px;
-@icon-bed-image: '../../img/sprite.png';
-@icon-bed: 143px 62px -143px -62px 55px 43px 250px 185px '../../img/sprite.png' 'icon-bed';
+@icon-bed-image: '../../.././build/img/sprite.png';
+@icon-bed: 143px 62px -143px -62px 55px 43px 250px 185px '../../.././build/img/sprite.png' 'icon-bed';
 @icon-check-name: 'icon-check';
 @icon-check-x: 121px;
 @icon-check-y: 91px;
@@ -152,8 +152,8 @@ At the bottom of this section, we provide information about the spritesheet itse
 @icon-check-height: 12px;
 @icon-check-total-width: 250px;
 @icon-check-total-height: 185px;
-@icon-check-image: '../../img/sprite.png';
-@icon-check: 121px 91px -121px -91px 16px 12px 250px 185px '../../img/sprite.png' 'icon-check';
+@icon-check-image: '../../.././build/img/sprite.png';
+@icon-check: 121px 91px -121px -91px 16px 12px 250px 185px '../../.././build/img/sprite.png' 'icon-check';
 @icon-cottage-name: 'icon-cottage';
 @icon-cottage-x: 143px;
 @icon-cottage-y: 0px;
@@ -163,8 +163,8 @@ At the bottom of this section, we provide information about the spritesheet itse
 @icon-cottage-height: 62px;
 @icon-cottage-total-width: 250px;
 @icon-cottage-total-height: 185px;
-@icon-cottage-image: '../../img/sprite.png';
-@icon-cottage: 143px 0px -143px 0px 80px 62px 250px 185px '../../img/sprite.png' 'icon-cottage';
+@icon-cottage-image: '../../.././build/img/sprite.png';
+@icon-cottage: 143px 0px -143px 0px 80px 62px 250px 185px '../../.././build/img/sprite.png' 'icon-cottage';
 @icon-fb-name: 'icon-fb';
 @icon-fb-x: 82px;
 @icon-fb-y: 91px;
@@ -174,8 +174,8 @@ At the bottom of this section, we provide information about the spritesheet itse
 @icon-fb-height: 17px;
 @icon-fb-total-width: 250px;
 @icon-fb-total-height: 185px;
-@icon-fb-image: '../../img/sprite.png';
-@icon-fb: 82px 91px -82px -91px 17px 17px 250px 185px '../../img/sprite.png' 'icon-fb';
+@icon-fb-image: '../../.././build/img/sprite.png';
+@icon-fb: 82px 91px -82px -91px 17px 17px 250px 185px '../../.././build/img/sprite.png' 'icon-fb';
 @icon-hotel-name: 'icon-hotel';
 @icon-hotel-x: 0px;
 @icon-hotel-y: 49px;
@@ -185,8 +185,8 @@ At the bottom of this section, we provide information about the spritesheet itse
 @icon-hotel-height: 64px;
 @icon-hotel-total-width: 250px;
 @icon-hotel-total-height: 185px;
-@icon-hotel-image: '../../img/sprite.png';
-@icon-hotel: 0px 49px 0px -49px 82px 64px 250px 185px '../../img/sprite.png' 'icon-hotel';
+@icon-hotel-image: '../../.././build/img/sprite.png';
+@icon-hotel: 0px 49px 0px -49px 82px 64px 250px 185px '../../.././build/img/sprite.png' 'icon-hotel';
 @icon-room-name: 'icon-room';
 @icon-room-x: 223px;
 @icon-room-y: 0px;
@@ -196,8 +196,8 @@ At the bottom of this section, we provide information about the spritesheet itse
 @icon-room-height: 43px;
 @icon-room-total-width: 250px;
 @icon-room-total-height: 185px;
-@icon-room-image: '../../img/sprite.png';
-@icon-room: 223px 0px -223px 0px 27px 43px 250px 185px '../../img/sprite.png' 'icon-room';
+@icon-room-image: '../../.././build/img/sprite.png';
+@icon-room: 223px 0px -223px 0px 27px 43px 250px 185px '../../.././build/img/sprite.png' 'icon-room';
 @icon-tooltip-name: 'icon-tooltip';
 @icon-tooltip-x: 184px;
 @icon-tooltip-y: 113px;
@@ -207,8 +207,8 @@ At the bottom of this section, we provide information about the spritesheet itse
 @icon-tooltip-height: 17px;
 @icon-tooltip-total-width: 250px;
 @icon-tooltip-total-height: 185px;
-@icon-tooltip-image: '../../img/sprite.png';
-@icon-tooltip: 184px 113px -184px -113px 16px 17px 250px 185px '../../img/sprite.png' 'icon-tooltip';
+@icon-tooltip-image: '../../.././build/img/sprite.png';
+@icon-tooltip: 184px 113px -184px -113px 16px 17px 250px 185px '../../.././build/img/sprite.png' 'icon-tooltip';
 @icon-uncheck-name: 'icon-uncheck';
 @icon-uncheck-x: 45px;
 @icon-uncheck-y: 141px;
@@ -218,8 +218,8 @@ At the bottom of this section, we provide information about the spritesheet itse
 @icon-uncheck-height: 12px;
 @icon-uncheck-total-width: 250px;
 @icon-uncheck-total-height: 185px;
-@icon-uncheck-image: '../../img/sprite.png';
-@icon-uncheck: 45px 141px -45px -141px 16px 12px 250px 185px '../../img/sprite.png' 'icon-uncheck';
+@icon-uncheck-image: '../../.././build/img/sprite.png';
+@icon-uncheck: 45px 141px -45px -141px 16px 12px 250px 185px '../../.././build/img/sprite.png' 'icon-uncheck';
 @icon-vk-name: 'icon-vk';
 @icon-vk-x: 99px;
 @icon-vk-y: 91px;
@@ -229,8 +229,8 @@ At the bottom of this section, we provide information about the spritesheet itse
 @icon-vk-height: 13px;
 @icon-vk-total-width: 250px;
 @icon-vk-total-height: 185px;
-@icon-vk-image: '../../img/sprite.png';
-@icon-vk: 99px 91px -99px -91px 22px 13px 250px 185px '../../img/sprite.png' 'icon-vk';
+@icon-vk-image: '../../.././build/img/sprite.png';
+@icon-vk: 99px 91px -99px -91px 22px 13px 250px 185px '../../.././build/img/sprite.png' 'icon-vk';
 @icon-wifi-name: 'icon-wifi';
 @icon-wifi-x: 82px;
 @icon-wifi-y: 49px;
@@ -240,8 +240,8 @@ At the bottom of this section, we provide information about the spritesheet itse
 @icon-wifi-height: 42px;
 @icon-wifi-total-width: 250px;
 @icon-wifi-total-height: 185px;
-@icon-wifi-image: '../../img/sprite.png';
-@icon-wifi: 82px 49px -82px -49px 50px 42px 250px 185px '../../img/sprite.png' 'icon-wifi';
+@icon-wifi-image: '../../.././build/img/sprite.png';
+@icon-wifi: 82px 49px -82px -49px 50px 42px 250px 185px '../../.././build/img/sprite.png' 'icon-wifi';
 @location-type-triangle-name: 'location-type-triangle';
 @location-type-triangle-x: 198px;
 @location-type-triangle-y: 82px;
@@ -251,8 +251,8 @@ At the bottom of this section, we provide information about the spritesheet itse
 @location-type-triangle-height: 16px;
 @location-type-triangle-total-width: 250px;
 @location-type-triangle-total-height: 185px;
-@location-type-triangle-image: '../../img/sprite.png';
-@location-type-triangle: 198px 82px -198px -82px 19px 16px 250px 185px '../../img/sprite.png' 'location-type-triangle';
+@location-type-triangle-image: '../../.././build/img/sprite.png';
+@location-type-triangle: 198px 82px -198px -82px 19px 16px 250px 185px '../../.././build/img/sprite.png' 'location-type-triangle';
 @logo-name: 'logo';
 @logo-x: 0px;
 @logo-y: 0px;
@@ -262,8 +262,8 @@ At the bottom of this section, we provide information about the spritesheet itse
 @logo-height: 49px;
 @logo-total-width: 250px;
 @logo-total-height: 185px;
-@logo-image: '../../img/sprite.png';
-@logo: 0px 0px 0px 0px 143px 49px 250px 185px '../../img/sprite.png' 'logo';
+@logo-image: '../../.././build/img/sprite.png';
+@logo: 0px 0px 0px 0px 143px 49px 250px 185px '../../.././build/img/sprite.png' 'logo';
 @plus-icon-name: 'plus-icon';
 @plus-icon-x: 223px;
 @plus-icon-y: 117px;
@@ -273,8 +273,8 @@ At the bottom of this section, we provide information about the spritesheet itse
 @plus-icon-height: 22px;
 @plus-icon-total-width: 250px;
 @plus-icon-total-height: 185px;
-@plus-icon-image: '../../img/sprite.png';
-@plus-icon: 223px 117px -223px -117px 22px 22px 250px 185px '../../img/sprite.png' 'plus-icon';
+@plus-icon-image: '../../.././build/img/sprite.png';
+@plus-icon: 223px 117px -223px -117px 22px 22px 250px 185px '../../.././build/img/sprite.png' 'plus-icon';
 @train-icon-name: 'train-icon';
 @train-icon-x: 97px;
 @train-icon-y: 113px;
@@ -284,13 +284,13 @@ At the bottom of this section, we provide information about the spritesheet itse
 @train-icon-height: 24px;
 @train-icon-total-width: 250px;
 @train-icon-total-height: 185px;
-@train-icon-image: '../../img/sprite.png';
-@train-icon: 97px 113px -97px -113px 58px 24px 250px 185px '../../img/sprite.png' 'train-icon';
+@train-icon-image: '../../.././build/img/sprite.png';
+@train-icon: 97px 113px -97px -113px 58px 24px 250px 185px '../../.././build/img/sprite.png' 'train-icon';
 @spritesheet-width: 250px;
 @spritesheet-height: 185px;
-@spritesheet-image: '../../img/sprite.png';
+@spritesheet-image: '../../.././build/img/sprite.png';
 @spritesheet-sprites: @arrow-left @arrow-right @burger @bus-icon @calendar-icon @error-notify @ftr-icon-fb @ftr-icon-inst @ftr-icon-vk @icon-area @icon-bath @icon-bed @icon-check @icon-cottage @icon-fb @icon-hotel @icon-room @icon-tooltip @icon-uncheck @icon-vk @icon-wifi @location-type-triangle @logo @plus-icon @train-icon;
-@spritesheet: 250px 185px '../../img/sprite.png' @spritesheet-sprites;
+@spritesheet: 250px 185px '../../.././build/img/sprite.png' @spritesheet-sprites;
 
 /*
 The provided classes are intended to be used with the array-like variables
