--- a/src/less/style.less
+++ b/src/less/style.less
@@ -6,7 +6,7 @@
 @import 'blocks/normalize.less';
 @import 'blocks/global_scaffolding.less';
 @import 'blocks/type.less';
-@import 'blocks/sprite.less';
+@import 'sprite.less';
 
 // Core variables and mixins
 @import "../../bower_components/bootstrap/less/mixins.less";
