--- a/src/less/blocks/btn.less
+++ b/src/less/blocks/btn.less
@@ -6,8 +6,9 @@
 	text-transform: uppercase;
 	font-size: @btn-font-size;
 	border-radius: @btn-border-radius;
-	padding: 7px 28px;
+	padding: 7px 20px 6px;
 	border: 0;
+  font-weight: 500;
 	&:hover {
 		background-color: @btn-bg--hover;
 		text-decoration: none;
