--- a/src/less/blocks/gallery.less
+++ b/src/less/blocks/gallery.less
@@ -1,4 +1,12 @@
 .gallery {
 	padding-top: 40px;
 	padding-bottom: 40px;
+	&__thumbs {
+		img {
+			cursor: pointer;
+			&:hover {
+				opacity: .8;
+			}
+		}
+	}
 }
