--- a/src/less/blocks/page-header.less
+++ b/src/less/blocks/page-header.less
@@ -19,7 +19,11 @@
 		}
 	}
 
-	.btn {
-		margin-top: 11px;
-	}
+  &__booking {
+    padding: 0;
+    .btn {
+      margin-top: 11px;
+      float: right;
+    }
+  }
 }
