--- a/src/less/blocks/review.less
+++ b/src/less/blocks/review.less
@@ -13,6 +13,10 @@
 		@media (min-width: @screen-sm) {
 			font-size: @font-size--h1;
 		}
+
+		@media (min-width: @screen-md) {
+			font-size: 30px;
+		}
 	}
 	&__slide {
 		background-color: #fff;
