fix width review carousel

--- a/src/less/blocks/review.less
+++ b/src/less/blocks/review.less
@@ -3,6 +3,13 @@
 	background-size: cover;
 	padding-top: 69px;
 	padding-bottom: 49px;
+
+	&__inner {
+		@media (min-width: @screen-md) {
+			width: 980px;
+		}
+	}
+
 	&__title {
 		margin-top: 0;
 		margin-bottom: 56px;
