fix btn bordered

--- a/src/less/blocks/btn.less
+++ b/src/less/blocks/btn.less
@@ -34,8 +34,8 @@
 		background-color: transparent;
 		border: @btn-border--bordered;
 		&:hover {
-			background-color: transparent;
-			color: @btn-color--bordered-hover;
+			background-color: @btn-color--bordered-hover;
+			color: @brand-primary;
 			border-color: @btn-color--bordered-hover;
 		}
 	}
