--- a/src/less/blocks/variables.less
+++ b/src/less/blocks/variables.less
@@ -895,7 +895,7 @@
 @btn-font-size: 14px;
 @btn-border-radius: 20px;
 @btn-border--bordered: 2px solid @btn-text-color;
-@btn-color--bordered-hover: darken(@btn-text-color, 10%);
+@btn-color--bordered-hover: @btn-text-color;
 
 
 //------------------------------------------------------------------------------
